kwiaciarnia/static/styles/main.css
.material-symbols-rounded {
  font-variation-settings:
  'FILL' 1,
  'wght' 400,
  'GRAD' 0,
  'opsz' 48
}

.nav_bar {
  background-color: #993232;
  color: black;
  position: fixed;
  overflow: hidden;
  top: 0;
  width: 100%;
  z-index: 1;
}

body {
  background-color: #f5ebeb;
}


tglr {
  color: black;
}

